# test_seccondbrain

./: .gitignore  mcp-config.json
deploy/: d-brain-bot.service  d-brain-process.service  d-brain-weekly.service
finance-bot/: .env.example  deploy.sh  finance-bot.service  pyproject.toml
finance-bot/src/finance_bot/: bot.py  categories.py  charts.py  config.py  currency.py  reports.py  storage.py
finance-bot/src/finance_bot/handlers/: text.py  voice.py
finance-bot/src/finance_bot/services/: claude.py
scripts/: daily_process.py  process.sh  vault-sync.sh
src/d_brain/: config.py
src/d_brain/services/: processor.py
vault/: MEMORY.md  Профиль.md
vault/.obsidian/: appearance.json  graph.json  workspace.json
vault/.sessions/: 1030145112.jsonl
vault/MOC/: MOC-weekly.md
vault/blog/: 2026-01-08-consumer-ai-2030-predictions.md
vault/daily/: 2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-25.md  2026-02-27.md  2026-02-28.md
vault/goals/: 0-vision-3y.md  1-yearly-2025.md  2-monthly.md  3-weekly.md
vault/summaries/: 2026-W08-summary.md  2026-W09-summary.md
vault/thoughts/learnings/: команда-которая-ведёт.md
vault/thoughts/projects/: bot-analitika.md  bot-monetizaciya.md  horeca-lichniy-brend.md  komanda.md  kontent-predlozhenie-suren.md  land-rover-l322.md  range-rover-l322-toplivo-nol.md  scheta-ip-iqolek.md  termez-horeca.md  termez-plan-nedeli.md  termez-standarty-uz.md  termez-voprosy-rustam.md
vault/thoughts/reflections/: 2026-02-23-otkrytost-s-zhenoy.md
vault/thoughts/tasks/: 2026-02-23-zabrat-kota-almaty.md  (+2 more)
(+7 files in other folders)
