[project]
name = "finance-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7",
    "anthropic>=0.34",
    "httpx>=0.27",
    "apscheduler>=3.10",
]

[project.scripts]
finance-bot = "finance_bot.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_bot"]
